trying G1GC